--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,9 +1,9 @@
 name: Qwik Benchmarks
 
 on:
-  push:
-    branches: [ main ]
   workflow_dispatch:
+  push:
+    branches: [main]
 
 permissions:
   contents: write
@@ -12,32 +12,36 @@ permissions:
 jobs:
   benchmark:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8 # match Qwik's version
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20.x
           cache: 'pnpm'
 
       - name: Install dependencies
-        run: |
-          corepack enable
-          pnpm install --frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
-      - name: Run benchmarks
+      - name: Run Benchmarks
         run: node scripts/benchmarks/runBenchmarks.js
 
-      - name: Show output
+      - name: Show Output
         run: cat benchmark-results.json
 
-      - name: Store results
+      - name: Upload Results to GitHub Pages
         uses: benchmark-action/github-action-benchmark@v1
         with:
           name: Qwik CI Benchmarks
-          tool: 'customSmallerIsBetter'
+          tool: customSmallerIsBetter
           output-file-path: benchmark-results.json
           github-token: ${{ secrets.GITHUB_TOKEN }}
           auto-push: true
